--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(79, 138, 206);
 }
 
 .App-link {
